src/components/ContactComponents/ContactForm.module.less
@import '../../less/index.less';

.wrapper {
  .center();
  margin: 7% auto;
  flex-direction: column;
  .img {
    width: 400px;
    height: 250px;
    margin: 2% auto;
    @media (min-width: 768px) {
      height: 450px;
      min-width: 390px;
      /*border: @showMe;*/
      margin-left: 3%;
    }
    @media (min-width: 992px) {
      height: 550px;
      min-width: 500px;
      margin-top: 5%;
      /*border: @showMe;*/
    }
  }
  @media (min-width: 768px) {
    flex-direction: row;
    justify-content: space-evenly;
    /*border: @showMe;*/
    width: 100%;
    margin: 12% auto;
  }
  @media (min-width: 992px) {
    width: 80%;
    margin-bottom: 10%;
  }
}
form {
  .custom-layout(space-evenly, center);
  flex-direction: column;
  /*border: @showMe;*/
  height: 85vh;
  padding: 3%;
  margin-bottom: 2%;
  @media (min-width: 768px) {
    width: 80%;
    margin: 0 auto;
    height: 50vh;
  }
  @media (min-width: 992px) {
    height: 45vh;
    min-width: 550px;
    margin: 3% auto;
  }
  div {
  .custom-layout(center, flex-start);
  flex-direction: column;
  label {
    color: @mainPurple;
    font-size: 3rem;
    font-family: @stylishText;
    margin-bottom: 2%;
    /*border: @showMe;*/
    @media (min-width: 992px) {
      margin: 4% auto;
    }
  }
  input {
  border: 2px solid @mainPurple;
  border-radius: 100px;
  font-size: 2.5rem;
  opacity: .8;
  text-align: center;
  margin: 3% auto;
  .transition(all .5s linear);
  &:hover {
    border: 2px solid @mainPink;
    box-shadow: 3px 3px 3px 3px;
  }
  @media (min-width: 768px) {
    font-size: 2.5rem;
  }
  }
  textarea {
    border: 2px solid @mainPurple;
    opacity: .8;
    font-size: 2.5rem;
    border-radius: 15px;
    text-align: center;
    width: 350px;
    height:300px;
    margin-bottom: 3%;
    .transition(all .5s linear);
    &:hover {
      border: 2px solid @mainPink;
      box-shadow: 3px 3px 3px 3px;
    }
    @media (min-width: 768px) {
      height: 300px;
      width: 350px;
      font-size: 2.5rem;
    }
    @media (min-width: 992px) {
      height: 350px;
      width: 450px;
      font-size: 2.5rem;
    }
  }
  }
}

ul {
  li {
    input {
      font-size: 2rem;
      color: @mainWhite;
      background: @mainPurple;
      border: 2px solid @mainWhite;
      padding: 8%;
      font-weight: 700;
      border-radius: 8px;
      box-shadow: 5px 5px 5px 5px;
      margin: 2% auto;
      .transition(all 1s ease-in-out);
      &:hover {
        background: @mainPink;
        color: @mainWhite;
        border: 2px solid @mainWhite;
      }
      @media (min-width: 768px) {
        font-size: 2rem;
        padding: 6%;
      }
      @media (min-width: 992px) {
        font-size: 2.5rem;
        padding: 8%;
      }
    }
  }
}

